# EvoTool-OL

./: .env  .gitignore  Deepsearchagent-example.py  README.md  main.py  pyproject.toml  repo.json  scraper.py  test.py  websearchtool-example.py  webtooltest.py
.cache/41/: cache.db
EvoAgent/: DeepResearchAgent.py  DeepResearchTools.py  WebSearch.py  __init__.py
Scraper/: Scraper.py
Toolmake/: howtouse.md
Toolmake/docker-example/: make.py
Toolmake/mineru/: download_docker.sh
