[project]
name = "evotool-ol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag2[openai,rag]>=0.8.0",
    "autogen[browser-use,openai]>=0.8.0",
    "composio-core>=0.7.6",
    "composio-langchain>=0.7.6",
    "composio-openai>=0.7.6",
    "numpy>=2.2.3",
    "openai>=1.65.4",
]
